--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.561.0",
     "mermaid": "^11.12.2",
     "next": "16.0.10",
     "react": "19.2.1",
